Fixed design, pictures, information, alignment, overall front-end structure

--- a/AutoWiki/AutoWiki/Content/bootstrap.css
+++ b/AutoWiki/AutoWiki/Content/bootstrap.css
@@ -4974,20 +4974,21 @@ a.list-group-item.active > .badge,
 }
 
 .container .jumbotron {
-  border-radius: 5px;
+  border-radius: 1000px;
+  background-color: #EBD2CA;
 }
 
 @media screen and (min-width: 768px) {
   .jumbotron {
-    padding-top: 48px;
-    padding-bottom: 48px;
+    padding-top: 20px;
+    padding-bottom: 50px;
   }
   .container .jumbotron {
     padding-right: 60px;
     padding-left: 60px;
   }
   .jumbotron h1 {
-    font-size: 63px;
+    font-size: 70px;
   }
 }
 
